--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,13 @@ html {
 	
 }
 
-body{
+#bg {
 	color: #EDEBEB;
 	background-image:url("../webimages/asteroid.png");
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	max-height: 1500px;
 }
 
 #wrap {
