adding the game state

--- a/assets/less/game.less
+++ b/assets/less/game.less
@@ -30,7 +30,7 @@ body.win-game:after {
 		content: 'Win! press "z" to play again';
 }
 body {
-		background-color: #ffcf00;
+		background-color: #000040;
 }
 
 .overlay {
