--- a/assets/less/game.less
+++ b/assets/less/game.less
@@ -20,15 +20,7 @@ body:after {
 		margin-top: -70px;
 		border-radius: 5px;
 }
-body.before-game:after {
-		content: 'press "z" to start';
-}
-body.lose-game:after {
-		content: 'press "z" to try again';
-}
-body.win-game:after {
-		content: 'Win! press "z" to play again';
-}
+
 body {
 		background-color: #000040;
 }
@@ -43,9 +35,32 @@ body {
 
 .btnContainer {
 	display:inline-block;
-	padding: 0.5em;
+	margin-top: 1em;
+	color:#fff;
 	#restartGameBtn {
 		display:none;
 	}
 }
+.scores {
+	display:inline-block;
+	margin-top: 1em;
+	color:#fff;
+	font-weight:bold;
+	margin-right:2em;
+	> span {
+		margin-right:1em;
+	}
+}
 
+
+.fuelbar {
+	margin-top: 1em;
+	color:#fff;
+	font-weight:bold;
+	margin-right:1em;
+	.progress {
+		display:inline-block; width:150px;
+		margin-bottom:0px;
+		 vertical-align: bottom;
+	}
+}
