--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ html {
 	padding-left: 40px;
 	background-color:rgba(0,0,0,1);
 	width: 100%;
+	min-width: 900px;
 	background-image:url("../webimages/header.png");
 	background-position:right;
 	background-repeat: no-repeat;
