--- a/assets/less/game.less
+++ b/assets/less/game.less
@@ -64,3 +64,13 @@ body {
 		 vertical-align: bottom;
 	}
 }
+
+
+table.scores {
+	td, th {
+		padding:2px 5px;
+	}
+	.element {
+		font-weight:bold;
+	}
+}
