--- a/assets/less/game.less
+++ b/assets/less/game.less
@@ -23,6 +23,8 @@ body:after {
 
 body {
 		background-color: #000040;
+		background: url(../../images/stars.png) 0 0 repeat;
+		backgroup-position: 0 0;
 }
 
 .overlay {
