--- a/assets/less/game.less
+++ b/assets/less/game.less
@@ -24,7 +24,7 @@ body:after {
 body {
 		background-color: #000040;
 		background: url(../../images/stars.png) 0 0 repeat;
-		backgroup-position: 0 0;
+		background-position: 0px 0px;
 }
 
 .overlay {
