--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 #bg {
 	color: #EDEBEB;
+	background-color: #000000;
 	background-image:url("../webimages/asteroid.png");
+	background-repeat: no-repeat;
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -64,4 +66,13 @@
 
 #footer {
 	width: auto;
+}
+
+.lang-img {
+	width: 20px;
+
+}
+
+.btn {
+	margin-bottom:5px;
 }
