Added padding to avoid menu overlap

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
   	background-position: center top;
   	color: #FFFFFF;
     font-family: 'Open Sans', sans-serif;
+	margin-bottom: 50px;
 }
 
 h1 {
