Made navigation responsive, moved game UI out of nav bar. Extended gamestate to allow access to player/playerbehaviour (for future movement controls)

--- a/assets/less/game.less
+++ b/assets/less/game.less
@@ -35,10 +35,12 @@ body {
     margin: 80px auto;
 }
 
+.nav-game {
+	position:absolute;
+	right:0px;
+}
+
 .btnContainer {
-	display:inline-block;
-	margin-top: 1em;
-	color:#fff;
 	#restartGameBtn,
 	#pause {
 		display:none;
