--- a/assets/less/game.less
+++ b/assets/less/game.less
@@ -40,6 +40,31 @@ body {
 	right:0px;
 }
 
+.touchcontrol { 
+	position:absolute;
+	z-index:999;
+	font-size:250%;
+	color:#fff;
+	top:30%;
+	
+	&.panel-right { 
+		right:0px;
+	}
+	
+	div { 
+		padding:1em;
+		background:#ffcf00;
+		opacity:0.8;
+		margin: 4px 0px;
+		&:hover,
+		&:active {
+		  color:#000; 
+		  opacity:0.9;
+		}
+	}
+	
+}
+
 .btnContainer {
 	#restartGameBtn,
 	#pause {
