--- a/css/index.css
+++ b/css/index.css
@@ -1,57 +1,38 @@
 body {
+	background-color: #00002a;
+  	background-image: url("../images/background.png");
   	background-position: center top;
   	background-repeat: no-repeat;
+  	color: #FFFFFF;
     font-family: 'Open Sans', sans-serif;
-	margin-bottom: 0px;
+    margin-top: 20px;
 }
 
 h1 {
-	margin-top: 10px;
-	font-size: 40px;
-    font-family: 'Dosis', sans-serif;
-    font-weight: 200;
-}
-
-h1 small {
-	font-size: 20px;
-}
-
-h2 {
-	margin-top: 10px;
 	font-size: 30px;
     font-family: 'Dosis', sans-serif;
     font-weight: 200;
 }
 
 a, a:active {
-	color: #00002a;
+	color: #ff9933;
 	text-decoration: none;
 }
 
 a:hover {
-	color: #00002a;
+	color: #ff9933;
 }
 
 li a, li a:active {
-	color: #333333;
+	color: #FFFFFF;
 }
 
 li a:hover {
 	color: #000000;
 }
 
-footer {
-	background-color: #b0b0cb;
-  	background-image: url("../images/background-light.png");
-  	background-position: center top;
-  	background-repeat: no-repeat;
-  	padding-left: 10px;
-  	padding-right: 10px;
-  	text-align: center;
-}
-
 .navbar-collapse {
-	background-color: #FFFFFF;
+	background-color: #00002a;
 }
 
 .lead {
@@ -67,22 +48,30 @@ footer {
     line-height: 23px;
 }
 
-.logo-ship {
+.logo {
 	margin-top: 10px;
-	height: 50px;
-	width: 50px;
+	height: 100px;
+	width: 100px;
 }
 
 .starter-template {
   text-align: center;
 }
 
-.fa-2x {
-	font-size: 1.5em;
+.btn-lg {
+	margin-top: 10px;
+	margin-bottom: 10px;
+	padding-top: 10px;
+	height: 50px;
+	width: 150px;
+	background-color: transparent;
+	border-color: #FFFFFF;
+	color: #FFFFFF;
+	font-size: 18px;
 }
 
-.social {
-
+.fa-2x {
+	font-size: 1.5em;
 }
 
 .social i {
@@ -92,7 +81,7 @@ footer {
 }
 
 .social a, .social a:active {
-	color: #333333;
+	color: #ffffff;
 	text-decoration: none;
 }
 
@@ -115,77 +104,25 @@ footer {
 	margin-right: 20px;
 }
 
-.credits-left {
-	text-align: right;
-	vertical-align: top;
-	width: 50%;
-	padding-right: 10px;
-}
-
-.credits-right {
-	text-align: left;
-	vertical-align: top;
-	width: 50%;
-	padding-left: 10px;
-}
-
-.credits {
-	width: 100%;
-}
-
-.credits tr td {
-	padding-bottom: 10px;
-}
-
-.credits .fa-twitter {
-	color: #0084b4;
-}
-
-.credits .fa-globe{
-	color: #329432;
-}
-
-.versions ul {
-    list-style:none;
-    padding-left:0;
-}
-
-.versions img {
-	width: 100%;
-	margin-bottom: 10px;
-}
-
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 760px) {
 	body {
-		margin-top: 50px;
-		font-size: 24px;
+		margin-bottom: 50px;
+    	margin-top: 50px;
 	}
 
 	h1 {
 		font-size: 80px;
 	}
 
-	h2 {
-		font-size: 60px;
-	}
-
-	li {
-		font-size: 14px;
-	}
-
-	footer {
-		font-size: 14px;
-	}
-
 	.fa-2x {
 		font-size: 2em;
 	}
 
-	.logo-ship {
-		margin-top: 10px;
-		height: 70px;
-		width: 70px;
+	.logo {
+		margin-top: 30px;
+		height: 140px;
+		width: 140px;
 	}
 
 	.navbar-nav{
@@ -199,7 +136,6 @@ footer {
 		padding-top: 20px;
 		padding-left: 30px;
 		padding-right: 30px;
-		padding-bottom: 20px;
 	}
 
 	.lead-minor {
@@ -218,13 +154,12 @@ footer {
 	.submission {
 		font-size: 24px;
 	}
-
-	.credits tr td {
-		padding-bottom: 20px;
-	}
 }
 
 @media (min-width: 795px) {
+	.navbar-collapse {
+		background-color: transparent;
+	}
 }
 
 /* Medium devices (desktops, 992px and up) */
@@ -242,10 +177,6 @@ footer {
 		margin-top: 30px;
 		height: 180px;
 		width: 180px;
-	}
-
-	.versions img {
-		width: auto;
 	}
 
 }
