added total score + session score to popup added waste value to score calc screen added retry button which skips the intro video resized radar for mobile / smaller devices made pause/unpause button clearer

--- a/assets/less/game.less
+++ b/assets/less/game.less
@@ -122,6 +122,9 @@ table.scores {
 		font-weight:bold;
 	}
 }
+.totalscore {
+	background-color:#eee; padding:0.5em; margin: 0px; text-align:right; font-size:200%;
+}
 
 div.achievements {
 	div.row {
